fixed overflow setting to images

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -110,6 +110,10 @@ button span {
     pointer-events: none;
 }
 
+img {
+    overflow: auto;
+}
+
 /* Main Layout, Home Page */
 
 .mainSectionContainer {
@@ -589,6 +593,7 @@ button span {
     bottom: 0;
     margin: 0;
     border: 1px solid white;
+    border-radius: 50%;
 }
 
 .groupChatImage img:first-of-type {
